create pagina produtos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           </div>
           <nav class="navbar">
             <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#sobre">Sobre</a></li>
-              <li><a href="/produto">Produto</a></li>
+              <li><a href="/#home">Home</a></li>
+              <li><a href="/#sobre">Sobre</a></li>
+              <li><a href="/#produtos">Produto</a></li>
               <li><a href="/contato">Contato</a></li>
             </ul>
           </nav>
@@ -74,13 +74,49 @@
             amet purus non ex interdum pharetra sit amet et tortor. Pellentesque
             sodales imperdiet blandit. Mauris nec ornare erat. In dapibus felis
             a nibh sagittis ullamcorper. Pellentesque sollicitudin sagittis
-            pretium.
+            pretium. amet purus non ex interdum pharetra sit amet et tortor.
+            Pellentesque sodales imperdiet blandit. Mauris nec ornare erat. In
+            dapibus felis a nibh sagittis ullamcorper. Pellentesque sollicitudin
+            sagittis pretium.
           </p>
           <img
             class="loja-sobre"
             src="./assets/image/loja-sobre.png"
             alt="loja"
           />
+        </div>
+      </div>
+    </section>
+    <section id="produtos" class="produtos">
+      <div class="container">
+        <div class="title-produtos">
+          <h1>Conheça nossos produtos</h1>
+        </div>
+        <div class="box-text-produtos">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
+            consectetur posuere eleifend. Duis faucibus iaculis lectus ut
+            blandit. Aenean ut dapibus mauris, ac venenatis odio. Aliquam sit
+            amet purus non ex interdum pharetra sit amet et tortor. Pellentesque
+            sodales imperdiet blandit.
+          </p>
+        </div>
+        <div class="box-produtos">
+          <div class="item-produtos">
+            <img src="./assets/image/croissant.png" alt="croissant" />
+          </div>
+          <div class="item-produtos">
+            <img src="./assets/image/pao-de-forma.png" alt="pao de forma" />
+          </div>
+          <div class="item-produtos">
+            <img src="./assets/image/frances.png" alt="frances" />
+          </div>
+          <div class="item-produtos">
+            <img src="./assets/image/italiano.png" alt="italiano" />
+          </div>
+          <div class="item-produtos">
+            <img src="./assets/image/broa-escura.png" alt="broa escura" />
+          </div>
         </div>
       </div>
     </section>
