FIX: modificado navegação

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           </div>
           <nav class="navbar">
             <ul>
-              <li><a href="/#home">Home</a></li>
-              <li><a href="/#sobre">Sobre</a></li>
-              <li><a href="/#produtos">Produto</a></li>
-              <li><a href="/contato">Contato</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#produtos">Produto</a></li>
+              <li><a href="#contato">Contato</a></li>
             </ul>
           </nav>
         </div>
@@ -27,7 +27,7 @@
     </header>
     <section id="home" class="home">
       <img src="./assets/image/fundo-home.png" alt="" />
-      <div class="overlay"></div>
+      <div class="overlayer"></div>
       <div class="text-home container">
         <h1>O Melhor pão do Mundo</h1>
         <p>
@@ -37,7 +37,7 @@
           non ex interdum pharetra sit amet et tortor. Pellentesque sodales
           imperdiet blandit.
         </p>
-        <button class="btn">Produtos</button>
+        <a href="#produtos" class="btn">Produtos</a>
       </div>
       <div class="indicator">
         <svg
@@ -103,19 +103,29 @@
         </div>
         <div class="box-produtos">
           <div class="item-produtos">
+            <div class="overlayer"></div>
             <img src="./assets/image/croissant.png" alt="croissant" />
+            <p>CROISSANT</p>
           </div>
           <div class="item-produtos">
+            <div class="overlayer"></div>
             <img src="./assets/image/pao-de-forma.png" alt="pao de forma" />
+            <p>PÃO DE FORMA</p>
           </div>
           <div class="item-produtos">
+            <div class="overlayer"></div>
             <img src="./assets/image/frances.png" alt="frances" />
+            <p>FRANCES</p>
           </div>
           <div class="item-produtos">
+            <div class="overlayer"></div>
             <img src="./assets/image/italiano.png" alt="italiano" />
+            <p>ITALIANO</p>
           </div>
           <div class="item-produtos">
+            <div class="overlayer"></div>
             <img src="./assets/image/broa-escura.png" alt="broa escura" />
+            <p>BROA ESCURA</p>
           </div>
         </div>
       </div>
