--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f223593715.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="header">
@@ -130,5 +134,74 @@
         </div>
       </div>
     </section>
+    <section id="contato" class="contato">
+      <div class="wrapper">
+        <div class="title-contato">
+          <h1>Fale com a gente</h1>
+        </div>
+        <div class="box-text-contato">
+          <p>Avenida das flores 1529 São joão - PR 41-30178956</p>
+        </div>
+        <form>
+          <div class="form-contato">
+            <div class="form-item-grid">
+              <div class="form-group">
+                <input
+                  class="input-control"
+                  type="text"
+                  name="name"
+                  placeholder="Nome"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  class="input-control radius"
+                  type="text"
+                  name="phone"
+                  placeholder="Telefone"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  class="input-control radius"
+                  type="email"
+                  name="email"
+                  placeholder="Email"
+                />
+              </div>
+            </div>
+            <div class="form-item-grid">
+              <textarea
+                placeholder="Sua mensagem"
+                class="text-control radius"
+              ></textarea>
+            </div>
+            <div class="form-item-grid">
+              <button class="btn radius">Enviar</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
+    <section class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.286843346823!2d-49.21693884905563!3d-25.428671983709414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce58cea5ec053%3A0x5323193c213574c2!2sJockey%20Plaza%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1656465877663!5m2!1spt-BR!2sbr"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <p>O Padeiro 2022 - Todos os direitos reservados</p>
+          <div>
+            <span><i class="fab fa-instagram"></i></span>
+            <span><i class="fab fa-facebook-square"></i></span>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
