--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
     <section id="home" class="home">
       <img src="./assets/image/fundo-home.png" alt="" />
       <div class="overlayer"></div>
-      <div class="text-home container">
-        <h1>O Melhor pão do Mundo</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-          consectetur posuere eleifend. Duis faucibus iaculis lectus ut blandit.
-          Aenean ut dapibus mauris, ac venenatis odio. Aliquam sit amet purus
-          non ex interdum pharetra sit amet et tortor. Pellentesque sodales
-          imperdiet blandit.
-        </p>
-        <a href="#produtos" class="btn">Produtos</a>
+      <div class="text-home">
+        <div class="container text-flex-center">
+          <h1>O Melhor pão do Mundo</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br />
+            Nam consectetur posuere eleifend. Duis faucibus iaculis lectus ut
+            blandit. <br />Aenean ut dapibus mauris, ac venenatis odio.<br />
+            Aliquam sit amet purus non ex interdum pharetra sit amet et tortor.
+            <br />Pellentesque sodales imperdiet blandit.
+          </p>
+          <a href="#produtos" class="btn">Produtos</a>
+        </div>
       </div>
       <div class="indicator">
         <svg
